Corrected Dockerfile