@@ -1,19 +1,13 @@
-FROM eclipse-temurin:17 as jre-build
-RUN $JAVA_HOME/bin/jlink \
-         --add-modules java.base \
-         --strip-debug \
-         --no-man-pages \
-         --no-header-files \
-         --compress=2 \
-         --output /javaruntime
+FROM eclipse-temurin:17-jre-alpine as builder
+WORKDIR extracted
+ADD ./target/*.jar app.jar
+RUN java -Djarmode=layertools -jar app.jar extract
 
-FROM debian:buster-slim
-ENV JAVA_HOME=/opt/java/openjdk
-ENV PATH "${JAVA_HOME}/bin:${PATH}"
-COPY --from=jre-build /javaruntime $JAVA_HOME
-
-RUN mkdir /opt/app
-WORKDIR /opt/app
-COPY ./target/*.jar ./
-RUN mv *.jar app.jar
-CMD ["java", "-jar", "app.jar"]
+FROM eclipse-temurin:17-jre-alpine
+WORKDIR application
+COPY --from=builder extracted/dependencies/ ./
+COPY --from=builder extracted/spring-boot-loader/ ./
+COPY --from=builder extracted/snapshot-dependencies/ ./
+COPY --from=builder extracted/application/ ./
+EXPOSE 8080
+ENTRYPOINT ["java", "org.springframework.boot.loader.JarLauncher"]
